MC-5648: Catalog product list widget Viewport Issues: Add to cart buttons are hidden on mobile & Review Links Clash With Other Elements

--- a/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/module/_listings.less
@@ -73,6 +73,10 @@
             &-actions {
                 font-size: 0;
 
+                > * {
+                    font-size: 1.4rem;
+                }
+
                 .actions-secondary {
                     display: inline-block;
                     font-size: 1.4rem;
